<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<!-- IDの表示用テキストボックス -->
        <TextView
            android:id="@+id/view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="50sp"
            android:hint="@string/id_label" />
		<!-- メモの編集用テキストボックス -->
        <EditText
            android:id="@+id/edit_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:inputType="text" />
    </LinearLayout>

    <!-- 設定用ボタン -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_label" />
        <Button
            android:id="@+id/modify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modify_label" />
        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_label" />
    </LinearLayout>

    <!-- データ表示用のリストビュー -->
    <ListView
        android:id="@android:id/list"
        android:choiceMode="singleChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ListView>
    <!-- データが1行もないときに表示するテキストビュー -->
    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_memo" />

</LinearLayout>